--- a/src/frontend/templates/index.html
+++ b/src/frontend/templates/index.html
@@ -4,15 +4,24 @@
     <title>Digest Twitter Thoughts</title>
 </head>
 <body>
-    <h2>Digest Twitter Thoughts</h2>
+    <h2>Get tweet sentiment</h2>
     <form action="/digest" method="post">
-        <label for="tokens">Enter Tokens (comma-separated):</label><br>
+        <label for="tokens">Get tweet sentiment</label><br>
         <input type="text" id="tokens" name="tokens"><br>
+        <button type="submit">Digest</button>
+    </form>
+
+    <h2>Get tweet sentiment</h2>
+    <form action="/digest" method="post">
+        <label for="tokens">Get tweet sentiment</label><br>
+        <input type="text" id="tokens" name="tokens"><br>
+        
         <input type="radio" id="csv" name="source" value="csv">
         <label for="csv">CSV</label><br>
         <input type="radio" id="api" name="source" value="api">
         <label for="api">API</label><br>
         <button type="submit">Digest</button>
     </form>
+
 </body>
 </html>
