working on frontend/backend

--- a/src/frontend/templates/index.html
+++ b/src/frontend/templates/index.html
@@ -11,16 +11,9 @@
         <button type="submit">Digest</button>
     </form>
 
-    <h2>Get tweet sentiment</h2>
-    <form action="/digest" method="post">
-        <label for="tokens">Get tweet sentiment</label><br>
-        <input type="text" id="tokens" name="tokens"><br>
-        
-        <input type="radio" id="csv" name="source" value="csv">
-        <label for="csv">CSV</label><br>
-        <input type="radio" id="api" name="source" value="api">
-        <label for="api">API</label><br>
-        <button type="submit">Digest</button>
+    <h2>Get tweet disribution by author</h2>
+    <form action="/tweets_distribution" method="post">
+        <button type="submit">Get tweet distribution</button>
     </form>
 
 </body>
