change id to author

--- a/src/frontend/templates/index.html
+++ b/src/frontend/templates/index.html
@@ -4,11 +4,11 @@
     <title>Digest Twitter Thoughts</title>
 </head>
 <body>
-    <h2>Get tweet sentiment</h2>
+    <h2>Get sentiments of inputed authors tweets</h2>
     <form action="/digest" method="post">
         <label for="tokens">Get tweet sentiment</label><br>
         <input type="text" id="tokens" name="tokens"><br>
-        <button type="submit">Digest</button>
+        <button type="submit">submit</button>
     </form>
 
     <h2>Get tweet disribution by author</h2>
